codex-rs/core/tests/suite/snapshots/all__suite__compact_remote__remote_mid_turn_compaction_does_not_restate_realtime_end_shapes.snap
---
source: core/tests/suite/compact_remote.rs
expression: "format_labeled_requests_snapshot(\"Remote mid-turn continuation compaction after realtime was closed before the turn: the initial second-turn request emits realtime-end instructions, but the continuation request does not restate them after compaction because the current turn already established the inactive baseline.\",\n&[(\"Second Turn Initial Request\", second_turn_request),\n(\"Remote Compaction Request\", &compact_request),\n(\"Remote Post-Compaction History Layout\", post_compact_request),])"
---
Scenario: Remote mid-turn continuation compaction after realtime was closed before the turn: the initial second-turn request emits realtime-end instructions, but the continuation request does not restate them after compaction because the current turn already established the inactive baseline.

## Second Turn Initial Request
00:message/developer[3]:
    [01] <realtime_conversation>\nRealtime conversation started.\n\nYou a...
    [02] <PERMISSIONS_INSTRUCTIONS>
    [03] <ENVIRONMENT_CONTEXT:cwd=<CWD>>
01:message/user:SETUP_USER
02:message/assistant:REMOTE_SETUP_REPLY
03:message/developer:<realtime_conversation>\nRealtime conversation ended.\n\nSubsequ...
04:message/user:USER_TWO

## Remote Compaction Request
00:message/developer[3]:
    [01] <realtime_conversation>\nRealtime conversation started.\n\nYou a...
    [02] <PERMISSIONS_INSTRUCTIONS>
    [03] <ENVIRONMENT_CONTEXT:cwd=<CWD>>
01:message/user:SETUP_USER
02:message/assistant:REMOTE_SETUP_REPLY
03:message/developer:<realtime_conversation>\nRealtime conversation ended.\n\nSubsequ...
04:message/user:USER_TWO
05:function_call/test_tool
06:function_call_output:unsupported call: test_tool

## Remote Post-Compaction History Layout
00:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <ENVIRONMENT_CONTEXT:cwd=<CWD>>
01:compaction:encrypted=true
