codex-rs/core/tests/suite/snapshots/all__suite__compact_remote__remote_pre_turn_compaction_context_window_exceeded_shapes.snap
---
source: core/tests/suite/compact_remote.rs
expression: "format_labeled_requests_snapshot(\"Remote pre-turn auto-compaction context-window failure: compaction request excludes the incoming user message and the turn errors.\",\n&[(\"Remote Compaction Request (Incoming User Excluded)\",\n&include_attempt_request),])"
---
Scenario: Remote pre-turn auto-compaction context-window failure: compaction request excludes the incoming user message and the turn errors.

## Remote Compaction Request (Incoming User Excluded)
00:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <ENVIRONMENT_CONTEXT:cwd=<CWD>>
01:message/user:USER_ONE
02:message/assistant:REMOTE_FIRST_REPLY
